[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
rand_distr = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = "0.4"
dotenv = "0.15"
